gui-fix (#84)
* input debounce

* Gui fix

* Fix filtering and project adding/removing

* Enhance UI elements and improve event handling in sorting and search components

* Delete default log

* Refactor header component for OS-specific rendering and update font size in styles

* Implement OS-specific header components and enhance window button functionality

* Add Linux packaging support and fixed the Linux taskbar icon problem

* Settings importing

* Settings loading fix

---------

Co-authored-by: ikvict07 <antongorobec101@gmail.com>